# sre-agent

./: .gitignore  LICENSE  README.md  marketplace.json
plugins/: AGENTS.md
plugins/livesite-agent/: plugin.json
plugins/livesite-agent/skills/livesite-coordinator/: SKILL.md
plugins/livesite-agent/skills/livesite-coordinator/references/: candidate-contract.md  confirm.md  funnel-triage.md  memory-trust.md  onboarding.md  work-store.md
plugins/sre-agent/: plugin.json
plugins/sre-agent/skills/ado-context/: SKILL.md
plugins/sre-agent/skills/code-search/: SKILL.md
plugins/sre-agent/skills/code-search/cli/: .gitignore  Cargo.toml  README.md  build.ps1
plugins/sre-agent/skills/code-search/cli/src/: main.rs
plugins/sre-agent/skills/code-search/cli/test/: build-prerequisites.dryrun.ps1
plugins/sre-agent/skills/investigation-heuristics/: SKILL.md
plugins/sre-agent/skills/investigation-heuristics/references/: applying-heuristics.md  (+1 more)
plugins/sre-agent/skills/service-catalog/: SKILL.md
plugins/sre-agent/skills/sre-agent/: SKILL.md
plugins/sre-agent/skills/sre-agent-dependency/: SKILL.md
plugins/sre-agent/skills/sre-agent-infra-change/: SKILL.md
plugins/sre-agent/skills/sre-agent-service-mechanics/: SKILL.md
plugins/sre-agent/skills/sre-agent-signal-validity/: SKILL.md
plugins/sre-agent/skills/sre-agent-timeline/: SKILL.md
plugins/sre-onboarding/: plugin.json
plugins/sre-onboarding/skills/investigation-knowledge-extraction/: SKILL.md
plugins/sre-onboarding/skills/service-onboarding/: SKILL.md
scripts/: validate-skill-discovery-metadata.ps1
(+25 files in other folders)
