[package]
name = "srch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1.11"
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

